# semiotic-emergence

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  FINDINGS-v5.md  FINDINGS.md  FRAMEWORK.md  PERFORMANCE.md  README.md  ab_bench.sh  analyze.py  autooptimize-experiments.jsonl  autooptimize-experiments.tsv  bench.sh  deep_analysis.py  deny.toml  launch.sh  rebalance.sh  status.sh  stop.sh
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: autooptimize.toml  settings.json
.claude/reference/: evolution-research.md  language-evolution-research.md
.claude/rules/: agent.md  world.md
.claude/skills/lint/: SKILL.md
.claude/specs/: simulation-core.md
benches/: simulation.rs
config/: default.toml  fast_test.toml  stage0_foraging.toml  stage1_evasion.toml
data/: README.md
data/era1/: seed42-10k-input-mi.csv  seed42-10k-output.csv  seed42-10k-trajectory.csv
data/v13-2k-42/: input_mi.csv  output.csv  trajectory.csv
figures/: generate_figures.py
findings/: 2026-03-09-100k-8x-scale.md  2026-03-09-pro-communication-tuning.md  2026-03-12-overnight-experiment.md  2026-03-13-overnight-analysis.md
gpu/: README.md
src/: brain.rs  config.rs  evolution.rs  lib.rs  main.rs  metrics.rs  rng.rs  signal.rs  simulation.rs  snapshot.rs  world.rs
src/agent/: action.rs  mod.rs  predator.rs  prey.rs  sensor.rs
src/brain/: activation.rs  genome.rs  innovation.rs  mod.rs  network.rs
src/evolution/: fitness.rs  kin.rs  mod.rs  population.rs  reproduction.rs  selection.rs  species.rs
src/signal/: message.rs  mod.rs  propagation.rs
src/stats/: collector.rs  export.rs  metrics.rs  mod.rs
src/viz/: dashboard.rs  mod.rs  terminal.rs
src/world/: entity.rs  food.rs  grid.rs  mod.rs  terrain.rs
tests/: evolution_smoke.rs
